[B]Version 1.0.1[/B] - 2021-07-06
[LIST]
[*]Fix: Download cover for Python 3 support.
[/LIST]

[B]Version 1.0.0[/B] - 2021-07-03
[LIST]
[*]Update: Changes for Python 3 support in calibre5.
[/LIST]

[B]Version 0.2.1[/B] - 2018-09-13
[LIST]
[*]Update for Kyobo website changes
[/LIST]

[B]Version 0.2.0[/B] - 2016-02-05
[LIST]
[*]Update for Kyobo website changes. (XPath query)
[/LIST]

[B]Version 0.1.2[/B] - 2014-11-09
[LIST]
[*]Fix PyQt4 to PyQt5 as Calibre moving to Qt 5.
[/LIST]

[B]Version 0.1.0[/B] 2014-03-22
Initial release of KyoboBook Metadata Source Plugin
based on the Goodreads work by Grant Drake <grant.drake@gmail.com>.